--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,16 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Personal Website Dr Daniel Donaldson
+email: d.l.donaldson@bham.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to my website! I am an Assistant Professor at the University of Birmingham
+  working in the area of electrical power system resilience. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: DDonaldsonECE
+github_username:  DLDonaldson
 
 # Build settings
 theme: minima
