Update config for picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Daniel L. Donaldson"
-  avatar           : "profile.png"
+  avatar           : "profile2.jpg"
   bio              : "Resilience - Forecasting - Distribution System Planning"
   location         : "Birmingham, UK"
   employer         :
@@ -100,7 +100,7 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : 
+  impactstory      :
   lastfm           :
   linkedin         :
   orcid            : "https://orcid.org/0000-0003-3419-3624"
