--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,13 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
+    url: https://scholar.google.com/citations?hl=en&user=c9nJoxkAAAAJ
 
   - title: "Research Team"
     url: /team/
 
-  - title: "Teaching"
-    url: /teaching/
-
-  - title: "CV"
-    url: /cv/
+#  - title: "CV"
+#    url: /cv/
 
   - title: "Resources"
     url: /resources/
